project/Server_HW_final/Optimized_Project/solution1/csim/report/LZW_hybrid_hash_HW_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../baseline.cpp in debug mode
../../../../baseline.cpp: In function ‘int main()’:
../../../../baseline.cpp:45:65: error: invalid conversion from ‘const char*’ to ‘unsigned char*’ [-fpermissive]
     int boundary_num = cdc("test.txt", ArrayOfChunks, chunk_size);   //boundary_num should use char?
                                                                 ^
../../../../baseline.cpp:45:65: error: invalid conversion from ‘char**’ to ‘int’ [-fpermissive]
../../../../baseline.cpp:45:65: error: cannot convert ‘uint16_t* {aka short unsigned int*}’ to ‘char**’ for argument ‘3’ to ‘int cdc(unsigned char*, int, char**, uint16_t*)’
make: *** [csim.mk:72: obj/baseline.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
